DuPont DevSB/src/objects/SFDC_Answer__c.object
<CustomObject>
    <description>The range of possible answers for a given question. Each answer has a score, and caller coaching, and determines the follow on question to ask.</description>
    <fields>
        <fullName>Answer_Coach__c</fullName>
        <description>Coaching/ guiding for the person asking these question.</description>
        <label>Answer Coach</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The order the answer appears in the list of answers</description>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to store text values in an &apos;other&apos; field</description>
        <label>Allow Free-form Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <description>The question object that the answer applies to.</description>
        <label>Question</label>
        <referenceTo>SFDC_Questions__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>The relative weight assigned to this answer.  Note: This is relative weight, not absolute weight.</description>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <displayFormat>AN-{000000}</displayFormat>
        <label>Answer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>